# heavy-lifting

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  claude.md  docker-compose.prod.yml  docker-compose.yml  orchestrator-research.md  pyproject.toml
docs/: README.md
frontend/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
githooks/: pre-commit
instration/: CONFIG_SETTINGS_SKILL.md  PRE_COMMIT_CHECKS_SKILL.md  RUNTIME_SCENARIO_RUNNER_SUBAGENT.md  RUNTIME_SCENARIO_SKILL.md  TASK_CONTEXT_TEMPLATE.md  TASK_PROGRESS_TEMPLATE.md  TASK_REVIEW_TEMPLATE.md  TASK_SUMMARY_TEMPLATE.md  TASK_TEMPLATE.md  WORKLOG_CONTEXT_TEMPLATE.md  WORKLOG_STATUS_TEMPLATE.md  architecture_scheme.md  hacker_sprint_1.md  instruction.md  project.md
tests/: test_agent_runner.py  test_api_auth.py  test_api_economics.py  test_api_prompts.py  test_api_retro.py  test_api_settings.py  test_api_stats.py  test_api_task_restart.py  test_api_tasks_manual_comment.py  test_bootstrap_db.py  test_composition.py  test_context_builder.py  test_db.py  test_deliver_worker.py  test_demo.py  test_demo_seed.py  test_execute_worker.py  test_execute_worker_triage_dispatch.py  test_execute_worker_triage_followup.py  test_execute_worker_triage_pipeline.py  test_execute_worker_triage_prepare.py  test_github_scm.py  test_linear_tracker.py  test_linear_tracker_link_provenance.py  test_local_agent_runner_triage.py  test_logging_setup.py  test_mock_task_selection_service.py  test_mock_tracker_link_provenance.py  test_models.py  (+15 more)
(+362 files in other folders)
